--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,24 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="header__redline"></div>
+			<div class="header__redline">
+				<img src="./img/header-lines.png" alt="" class="header__lines">
+				<img src="./img/boy-white.png" alt="" class="header__men header__men-white active">
+				<img src="./img/boy-black.png" alt="" class="header__men header__men-black">
+				<img src="./img/white-boot1.png" alt="" class="header__boots header__boots-white boot1 active">
+				<img src="./img/white-boot2.png" alt="" class="header__boots header__boots-white boot2 active">
+				<img src="./img/black-boot1.png" alt="" class="header__boots header__boots-black boot1">
+				<img src="./img/black-boot2.png" alt="" class="header__boots header__boots-black boot2">
+				<div class="header__sale">-55%</div>
+			</div>
 			<div class="header__content">
 				<div class="logo__basic">
 					<img src="./img/basic.png" alt="logo" class="logo__basic-img">
 				</div>
 				<div class="header__titles">
 					<h1 class="header__title">Puma Roma</h1>
-					<h2 class="header__info">ТОТАЛЬНЕ ЗНИЖЕННЯ ЦІН</h2>
-					<h3 class="header__subinfo">Тепер якісне чоловіче взуття доступне кожному.</h3>
+					<h2 class="header__info">ЖАРКАЯ АКЦИЯ ОТ PUMA</h2>
+					<h3 class="header__subinfo">Качественная обувь для тебя</h3>
 				</div>
 				<div class="price">
 					<div class="new__price">1190₴</div>
@@ -34,9 +43,538 @@
 					<a href="#" class="order__link">
 						Заказать
 					</a>
+					<div class="time">
+						Акція діє до <span>02.03.2021</span>
+					</div>
+				</div>
+				<div class="header__btns-group">
+					<button class="header__btn header__btn-white active">
+						<img src="./img/vertical-boot1.png" alt="" class="header__btn-img">
+					</button>
+					<button class="header__btn header__btn-black">
+						<img src="./img/vertical-boot2.png" alt="" class="header__btn-img">
+					</button>
 				</div>
 			</div>
 		</header>
+		<main>
+			<div class="first-section">
+				<h2 class="main__title">P u m a &nbsp; R o m a</h2>
+				<div class="rotation__block">
+					<div class="rotation__title-back">
+						<h2 class="rotation__title">ПРеимущества</h2>
+						<h3 class="rotation__subtitle">Puma Roma</h3>
+					</div>
+					<div class="advantages advantage__1 active">
+						<h3 class="advantage__title">Фирменный стиль Puma</h3>
+						<p class="advantage__text">Узнаваемый дизайн в новом исполнении</p>
+					</div>
+					<div class="advantages advantage__2">
+						<h3 class="advantage__title">Фирменный стиль Puma</h3>
+						<p class="advantage__text">Узнаваемый дизайн в новом исполнении</p>
+					</div>
+					<div class="advantages advantage__3">
+						<h3 class="advantage__title">Качество для вашего комфорта</h3>
+						<p class="advantage__text">Идеальная посадка по ноге и дополнительная амортизация</p>
+					</div>
+					<div class="advantages advantage__4">
+						<h3 class="advantage__title">Исключительно натуральная кожа </h3>
+						<p class="advantage__text">Сочетание спортивного силуэта и натуральных материалов</p>
+					</div>
+					<div class="advantages advantage__5">
+						<h3 class="advantage__title">Исключительно натуральная кожа </h3>
+						<p class="advantage__text">Сочетание спортивного силуэта и натуральных материалов</p>
+					</div>
+					<button class="rotation__btn rotation__btn-1 active"></button>
+					<button class="rotation__btn rotation__btn-2 active"></button>
+					<button class="rotation__btn rotation__btn-3 active"></button>
+					<button class="rotation__btn rotation__btn-4 active"></button>
+					<button class="rotation__btn rotation__btn-5 active"></button>
+					<img src="./img/rotate-boot1.png" alt="" class="rotation__boot rotation__boot-1 active">
+					<img src="./img/rotate-boot2.png" alt="" class="rotation__boot rotation__boot-2">
+					<img src="./img/rotate-boot3.png" alt="" class="rotation__boot rotation__boot-3">
+					<img src="./img/rotate-boot4.png" alt="" class="rotation__boot rotation__boot-4">
+					<img src="./img/rotate-boot5.png" alt="" class="rotation__boot rotation__boot-5">
+					<a href="#" class="order__link">
+						Заказать
+					</a>
+				</div>
+				<div class="galary">
+					<div class="galary__background"></div>
+					<img src="./img/galary-man.png" alt="" class="galary__man-img">
+					<div class="galary__wrapper">
+						<div class="main__foto">
+							<a data-fancybox="gallery" href="./img/galary/white-1.jpg">
+								<img 
+									src="./img/galary/white-1.jpg" 
+									data-white="./img/galary/white-1.jpg"
+									data-black="./img/galary/black-1.jpg"
+									alt="" 
+									class="main__foto-img">
+							</a>
+						</div>
+						<div class="other__foto">
+							<a data-fancybox="gallery" href="./img/galary/white-2.jpg">
+								<img 
+									src="./img/galary/white-2.jpg" 
+									data-white="./img/galary/white-2.jpg"
+									data-black="./img/galary/black-2.jpg"
+									alt="" 
+									class="other__foto-img">
+							</a>
+						</div>
+						<div class="other__foto">
+							<a data-fancybox="gallery" href="./img/galary/white-3.jpg">
+								<img 
+									src="./img/galary/white-3.jpg" 
+									data-white="./img/galary/white-3.jpg"
+									data-black="./img/galary/black-3.jpg"
+									alt="" 
+									class="other__foto-img">
+							</a>
+						</div>
+						<div class="other__foto">
+							<a data-fancybox="gallery" href="./img/galary/white-4.jpg">
+								<img 
+									src="./img/galary/white-4.jpg" 
+									data-white="./img/galary/white-4.jpg"
+									data-black="./img/galary/black-4.jpg"
+									alt="" 
+									class="other__foto-img">
+							</a>
+						</div>
+						<div class="other__foto">
+							<a data-fancybox="gallery" href="./img/galary/white-5.jpg">
+								<img 
+									src="./img/galary/white-5.jpg" 
+									data-white="./img/galary/white-5.jpg"
+									data-black="./img/galary/black-5.jpg"
+									alt="" 
+									class="other__foto-img">
+							</a>
+						</div>
+					</div>
+					<div class="galary__btns-group">
+						<button class="header__btn header__btn-white active">
+							<img src="./img/vertical-boot1.png" alt="" class="header__btn-img">
+						</button>
+						<button class="header__btn header__btn-black">
+							<img src="./img/vertical-boot2.png" alt="" class="header__btn-img">
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="second-section">
+				<div class="card card__1">
+					<div class="card__background">
+						<img src="./img/logo.png" alt="" class="card__logo">
+					</div>
+					<div class="card__container">
+						<h3 class="card__title">Puma Roma Basic</h3>
+						<div class="card__left">
+							<img
+								data-white="./img/card1-white.png" 
+								data-black="./img/card1-black.png"
+								src="./img/card1-white.png" 
+								alt="" 
+								class="card__left-img">
+							<input type="chekbox">
+							<div class="card__left-galary">
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white1.jpg">
+										<img
+										data-white="./img/card-galary1/white1.jpg" 
+										data-black="./img/card-galary1/black1.jpg"
+										src="./img/card-galary1/white1.jpg" 
+										alt="" 
+										class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white2.jpg">
+										<img
+											data-white="./img/card-galary1/white2.jpg" 
+											data-black="./img/card-galary1/black2.jpg"
+											src="./img/card-galary1/white2.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white3.jpg">
+										<img
+											data-white="./img/card-galary1/white3.jpg" 
+											data-black="./img/card-galary1/black3.jpg"
+											src="./img/card-galary1/white3.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white4.jpg">
+										<img
+											data-white="./img/card-galary1/white4.jpg" 
+											data-black="./img/card-galary1/black4.jpg"
+											src="./img/card-galary1/white4.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+							</div>
+							<p class="card__info-sale">При покупці другої пари взуття знижка 200 $!</p>
+						</div>
+						<div class="card__right">
+							<table class="card__table">
+								<tr>
+									<td>Сезон:</td>
+									<td>Весна</td>
+								</tr>
+								<tr>
+									<td>Верх:</td>
+									<td>натуральная кожа</td>
+								</tr>
+								<tr>
+									<td>Подкладка:</td>
+									<td>текстиль</td>
+								</tr>
+								<tr>
+									<td>Подошва:</td>
+									<td>резина</td>
+								</tr>
+								<tr>
+									<td>Стиль:</td>
+									<td>comfort, active</td>
+								</tr>
+								<tr>
+									<td>Модель:</td>
+									<td>Puma Roma Basic</td>
+								</tr>
+								<tr>
+									<td>Вид товара:</td>
+									<td>Кроссовки</td>
+								</tr>
+								<tr>
+									<td>Пол:</td>
+									<td>мужской</td>
+								</tr>
+								<tr>
+									<td>Материал внутренней подошвы:</td>
+									<td>пенка ЕВА</td>
+								</tr>
+								<tr>
+									<td>Страна производства:</td>
+									<td>Вьетнам</td>
+								</tr>
+							</table>
+
+							<div class="size__btns-group">
+								<button class="size__btn active">40
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">41
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">42
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">43
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">44
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">45
+									<span class="size">26.5</span>
+								</button>
+							</div>
+							<div class="price">
+								<span class="new__price">1190₴</span>
+								<span class="old__price">2650₴</span>
+							</div>
+						</div>
+						<form class="card__form">
+							<input type="text" class="card__form-input" placeholder="Имя" required>
+							<input type="tel" class="card__form-input" placeholder="Номер телефона" required>
+							<button type="submit" class="order__link">
+								Заказать
+							</button>
+						</form>
+					</div>
+				</div>
+				<div class="card card__2">
+					<div class="card__background">
+						<img src="./img/logo.png" alt="" class="card__logo">
+					</div>
+					<div class="card__container">
+						<h3 class="card__title">Puma Roma Basic</h3>
+						<div class="card__left">
+							<img
+								data-white="./img/card1-white.png" 
+								data-black="./img/card1-black.png"
+								src="./img/card1-white.png" 
+								alt="" 
+								class="card__left-img">
+							<input type="chekbox">
+							<div class="card__left-galary">
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white1.jpg">
+										<img
+										data-white="./img/card-galary1/white1.jpg" 
+										data-black="./img/card-galary1/black1.jpg"
+										src="./img/card-galary1/white1.jpg" 
+										alt="" 
+										class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white2.jpg">
+										<img
+											data-white="./img/card-galary1/white2.jpg" 
+											data-black="./img/card-galary1/black2.jpg"
+											src="./img/card-galary1/white2.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white3.jpg">
+										<img
+											data-white="./img/card-galary1/white3.jpg" 
+											data-black="./img/card-galary1/black3.jpg"
+											src="./img/card-galary1/white3.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white4.jpg">
+										<img
+											data-white="./img/card-galary1/white4.jpg" 
+											data-black="./img/card-galary1/black4.jpg"
+											src="./img/card-galary1/white4.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+							</div>
+							<p class="card__info-sale">При покупці другої пари взуття знижка 200 $!</p>
+						</div>
+						<div class="card__right">
+							<table class="card__table">
+								<tr>
+									<td>Сезон:</td>
+									<td>Весна</td>
+								</tr>
+								<tr>
+									<td>Верх:</td>
+									<td>натуральная кожа</td>
+								</tr>
+								<tr>
+									<td>Подкладка:</td>
+									<td>текстиль</td>
+								</tr>
+								<tr>
+									<td>Подошва:</td>
+									<td>резина</td>
+								</tr>
+								<tr>
+									<td>Стиль:</td>
+									<td>comfort, active</td>
+								</tr>
+								<tr>
+									<td>Модель:</td>
+									<td>Puma Roma Basic</td>
+								</tr>
+								<tr>
+									<td>Вид товара:</td>
+									<td>Кроссовки</td>
+								</tr>
+								<tr>
+									<td>Пол:</td>
+									<td>мужской</td>
+								</tr>
+								<tr>
+									<td>Материал внутренней подошвы:</td>
+									<td>пенка ЕВА</td>
+								</tr>
+								<tr>
+									<td>Страна производства:</td>
+									<td>Вьетнам</td>
+								</tr>
+							</table>
+
+							<div class="size__btns-group">
+								<button class="size__btn active">40
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">41
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">42
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">43
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">44
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">45
+									<span class="size">26.5</span>
+								</button>
+							</div>
+							<div class="price">
+								<span class="new__price">1190₴</span>
+								<span class="old__price">2650₴</span>
+							</div>
+						</div>
+						<form class="card__form">
+							<input type="text" class="card__form-input" placeholder="Имя" required>
+							<input type="tel" class="card__form-input" placeholder="Номер телефона" required>
+							<button type="submit" class="order__link">
+								Заказать
+							</button>
+						</form>
+					</div>
+				</div>
+				<div class="card card__3">
+					<div class="card__background">
+						<img src="./img/logo.png" alt="" class="card__logo">
+					</div>
+					<div class="card__container">
+						<h3 class="card__title">Puma Roma Basic</h3>
+						<div class="card__left">
+							<img
+								data-white="./img/card1-white.png" 
+								data-black="./img/card1-black.png"
+								src="./img/card1-white.png" 
+								alt="" 
+								class="card__left-img">
+							<input type="chekbox">
+							<div class="card__left-galary">
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white1.jpg">
+										<img
+										data-white="./img/card-galary1/white1.jpg" 
+										data-black="./img/card-galary1/black1.jpg"
+										src="./img/card-galary1/white1.jpg" 
+										alt="" 
+										class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white2.jpg">
+										<img
+											data-white="./img/card-galary1/white2.jpg" 
+											data-black="./img/card-galary1/black2.jpg"
+											src="./img/card-galary1/white2.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white3.jpg">
+										<img
+											data-white="./img/card-galary1/white3.jpg" 
+											data-black="./img/card-galary1/black3.jpg"
+											src="./img/card-galary1/white3.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+								<div class="card__galary-fotos">
+									<a data-fancybox="card-gallery1" href="./img/card-galary1/white4.jpg">
+										<img
+											data-white="./img/card-galary1/white4.jpg" 
+											data-black="./img/card-galary1/black4.jpg"
+											src="./img/card-galary1/white4.jpg" 
+											alt="" 
+											class="card__galary-img">
+									</a>
+								</div>
+							</div>
+							<p class="card__info-sale">При покупці другої пари взуття знижка 200 $!</p>
+						</div>
+						<div class="card__right">
+							<table class="card__table">
+								<tr>
+									<td>Сезон:</td>
+									<td>Весна</td>
+								</tr>
+								<tr>
+									<td>Верх:</td>
+									<td>натуральная кожа</td>
+								</tr>
+								<tr>
+									<td>Подкладка:</td>
+									<td>текстиль</td>
+								</tr>
+								<tr>
+									<td>Подошва:</td>
+									<td>резина</td>
+								</tr>
+								<tr>
+									<td>Стиль:</td>
+									<td>comfort, active</td>
+								</tr>
+								<tr>
+									<td>Модель:</td>
+									<td>Puma Roma Basic</td>
+								</tr>
+								<tr>
+									<td>Вид товара:</td>
+									<td>Кроссовки</td>
+								</tr>
+								<tr>
+									<td>Пол:</td>
+									<td>мужской</td>
+								</tr>
+								<tr>
+									<td>Материал внутренней подошвы:</td>
+									<td>пенка ЕВА</td>
+								</tr>
+								<tr>
+									<td>Страна производства:</td>
+									<td>Вьетнам</td>
+								</tr>
+							</table>
+
+							<div class="size__btns-group">
+								<button class="size__btn active">40
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">41
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">42
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">43
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">44
+									<span class="size">26.5</span>
+								</button>
+								<button class="size__btn">45
+									<span class="size">26.5</span>
+								</button>
+							</div>
+							<div class="price">
+								<span class="new__price">1190₴</span>
+								<span class="old__price">2650₴</span>
+							</div>
+						</div>
+						<form class="card__form">
+							<input type="text" class="card__form-input" placeholder="Имя" required>
+							<input type="tel" class="card__form-input" placeholder="Номер телефона" required>
+							<button type="submit" class="order__link">
+								Заказать
+							</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</main>
 	</div>
 	<script src="./libs/jquery.min.js"></script>
 	<script src="./libs/aos.js"></script>
