--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link rel="stylesheet" href="./libs/slick.css" />
 	<link rel="stylesheet" href="./libs/slick-theme.css" />
@@ -105,52 +106,32 @@
 					<div class="galary__wrapper">
 						<div class="main__foto">
 							<a data-fancybox="gallery" href="./img/galary/white-1.jpg">
-								<img 
-									src="./img/galary/white-1.jpg" 
-									data-white="./img/galary/white-1.jpg"
-									data-black="./img/galary/black-1.jpg"
-									alt="" 
-									class="main__foto-img">
+								<img src="./img/galary/white-1.jpg" data-white="./img/galary/white-1.jpg"
+									data-black="./img/galary/black-1.jpg" alt="" class="main__foto-img">
 							</a>
 						</div>
 						<div class="other__foto">
 							<a data-fancybox="gallery" href="./img/galary/white-2.jpg">
-								<img 
-									src="./img/galary/white-2.jpg" 
-									data-white="./img/galary/white-2.jpg"
-									data-black="./img/galary/black-2.jpg"
-									alt="" 
-									class="other__foto-img">
+								<img src="./img/galary/white-2.jpg" data-white="./img/galary/white-2.jpg"
+									data-black="./img/galary/black-2.jpg" alt="" class="other__foto-img">
 							</a>
 						</div>
 						<div class="other__foto">
 							<a data-fancybox="gallery" href="./img/galary/white-3.jpg">
-								<img 
-									src="./img/galary/white-3.jpg" 
-									data-white="./img/galary/white-3.jpg"
-									data-black="./img/galary/black-3.jpg"
-									alt="" 
-									class="other__foto-img">
+								<img src="./img/galary/white-3.jpg" data-white="./img/galary/white-3.jpg"
+									data-black="./img/galary/black-3.jpg" alt="" class="other__foto-img">
 							</a>
 						</div>
 						<div class="other__foto">
 							<a data-fancybox="gallery" href="./img/galary/white-4.jpg">
-								<img 
-									src="./img/galary/white-4.jpg" 
-									data-white="./img/galary/white-4.jpg"
-									data-black="./img/galary/black-4.jpg"
-									alt="" 
-									class="other__foto-img">
+								<img src="./img/galary/white-4.jpg" data-white="./img/galary/white-4.jpg"
+									data-black="./img/galary/black-4.jpg" alt="" class="other__foto-img">
 							</a>
 						</div>
 						<div class="other__foto">
 							<a data-fancybox="gallery" href="./img/galary/white-5.jpg">
-								<img 
-									src="./img/galary/white-5.jpg" 
-									data-white="./img/galary/white-5.jpg"
-									data-black="./img/galary/black-5.jpg"
-									alt="" 
-									class="other__foto-img">
+								<img src="./img/galary/white-5.jpg" data-white="./img/galary/white-5.jpg"
+									data-black="./img/galary/black-5.jpg" alt="" class="other__foto-img">
 							</a>
 						</div>
 					</div>
@@ -172,52 +153,42 @@
 					<div class="card__container">
 						<h3 class="card__title">Puma Roma Basic</h3>
 						<div class="card__left">
-							<img
-								data-white="./img/card1-white.png" 
-								data-black="./img/card1-black.png"
-								src="./img/card1-white.png" 
-								alt="" 
-								class="card__left-img">
-							<input type="chekbox">
+							<img data-white="./img/card1-white.png" data-black="./img/card1-black.png"
+								src="./img/card1-white.png" alt="" class="card__left-img">
+							<div class="card__toggle">
+								<label class="toggle__label">Белый
+									<input type="checkbox" value="black" name="color">
+									<span class="color__check"></span>
+									Черный
+								</label>
+							</div>
 							<div class="card__left-galary">
 								<div class="card__galary-fotos">
 									<a data-fancybox="card-gallery1" href="./img/card-galary1/white1.jpg">
-										<img
-										data-white="./img/card-galary1/white1.jpg" 
-										data-black="./img/card-galary1/black1.jpg"
-										src="./img/card-galary1/white1.jpg" 
-										alt="" 
-										class="card__galary-img">
+										<img data-white="./img/card-galary1/white1.jpg"
+											data-black="./img/card-galary1/black1.jpg"
+											src="./img/card-galary1/white1.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
 									<a data-fancybox="card-gallery1" href="./img/card-galary1/white2.jpg">
-										<img
-											data-white="./img/card-galary1/white2.jpg" 
+										<img data-white="./img/card-galary1/white2.jpg"
 											data-black="./img/card-galary1/black2.jpg"
-											src="./img/card-galary1/white2.jpg" 
-											alt="" 
-											class="card__galary-img">
+											src="./img/card-galary1/white2.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
 									<a data-fancybox="card-gallery1" href="./img/card-galary1/white3.jpg">
-										<img
-											data-white="./img/card-galary1/white3.jpg" 
+										<img data-white="./img/card-galary1/white3.jpg"
 											data-black="./img/card-galary1/black3.jpg"
-											src="./img/card-galary1/white3.jpg" 
-											alt="" 
-											class="card__galary-img">
+											src="./img/card-galary1/white3.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
 									<a data-fancybox="card-gallery1" href="./img/card-galary1/white4.jpg">
-										<img
-											data-white="./img/card-galary1/white4.jpg" 
+										<img data-white="./img/card-galary1/white4.jpg"
 											data-black="./img/card-galary1/black4.jpg"
-											src="./img/card-galary1/white4.jpg" 
-											alt="" 
-											class="card__galary-img">
+											src="./img/card-galary1/white4.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 							</div>
@@ -308,52 +279,32 @@
 					<div class="card__container">
 						<h3 class="card__title">Puma Roma Basic</h3>
 						<div class="card__left">
-							<img
-								data-white="./img/card1-white.png" 
-								data-black="./img/card1-black.png"
-								src="./img/card1-white.png" 
-								alt="" 
+							<img data-black="./img/card2-black.png" src="./img/card2-black.png" alt=""
 								class="card__left-img">
 							<input type="chekbox">
 							<div class="card__left-galary">
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white1.jpg">
-										<img
-										data-white="./img/card-galary1/white1.jpg" 
-										data-black="./img/card-galary1/black1.jpg"
-										src="./img/card-galary1/white1.jpg" 
-										alt="" 
-										class="card__galary-img">
+									<a data-fancybox="card-gallery2" href="./img/card-galary2/black1.jpg">
+										<img data-black="./img/card-galary2/black1.jpg"
+											src="./img/card-galary2/black1.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white2.jpg">
-										<img
-											data-white="./img/card-galary1/white2.jpg" 
-											data-black="./img/card-galary1/black2.jpg"
-											src="./img/card-galary1/white2.jpg" 
-											alt="" 
-											class="card__galary-img">
+									<a data-fancybox="card-gallery2" href="./img/card-galary2/black2.jpg">
+										<img data-black="./img/card-galary2/black2.jpg"
+											src="./img/card-galary2/black2.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white3.jpg">
-										<img
-											data-white="./img/card-galary1/white3.jpg" 
-											data-black="./img/card-galary1/black3.jpg"
-											src="./img/card-galary1/white3.jpg" 
-											alt="" 
-											class="card__galary-img">
+									<a data-fancybox="card-gallery2" href="./img/card-galary2/black3.jpg">
+										<img data-black="./img/card-galary2/black3.jpg"
+											src="./img/card-galary2/black3.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white4.jpg">
-										<img
-											data-white="./img/card-galary1/white4.jpg" 
-											data-black="./img/card-galary1/black4.jpg"
-											src="./img/card-galary1/white4.jpg" 
-											alt="" 
-											class="card__galary-img">
+									<a data-fancybox="card-gallery2" href="./img/card-galary2/black4.jpg">
+										<img data-black="./img/card-galary2/black4.jpg"
+											src="./img/card-galary2/black4.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 							</div>
@@ -444,52 +395,42 @@
 					<div class="card__container">
 						<h3 class="card__title">Puma Roma Basic</h3>
 						<div class="card__left">
-							<img
-								data-white="./img/card1-white.png" 
-								data-black="./img/card1-black.png"
-								src="./img/card1-white.png" 
-								alt="" 
-								class="card__left-img">
-							<input type="chekbox">
+							<img data-white="./img/card3-yellow.png" data-black="./img/card3-black.png"
+								src="./img/card3-yellow.png" alt="" class="card__left-img">
+							<div class="card__toggle">
+								<label class="toggle__label">Желтый
+									<input type="checkbox" value="black" name="color">
+									<span class="color__check"></span>
+									Черный
+								</label>
+							</div>
 							<div class="card__left-galary">
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white1.jpg">
-										<img
-										data-white="./img/card-galary1/white1.jpg" 
-										data-black="./img/card-galary1/black1.jpg"
-										src="./img/card-galary1/white1.jpg" 
-										alt="" 
-										class="card__galary-img">
+									<a data-fancybox="card-gallery3" href="./img/card-galary3/yellow1.jpg">
+										<img data-white="./img/card-galary3/yellow1.jpg"
+											data-black="./img/card-galary3/black1.jpg"
+											src="./img/card-galary3/yellow1.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white2.jpg">
-										<img
-											data-white="./img/card-galary1/white2.jpg" 
-											data-black="./img/card-galary1/black2.jpg"
-											src="./img/card-galary1/white2.jpg" 
-											alt="" 
-											class="card__galary-img">
+									<a data-fancybox="card-gallery3" href="./img/card-galary3/yellow2.jpg">
+										<img data-white="./img/card-galary3/yellow2.jpg"
+											data-black="./img/card-galary3/black2.jpg"
+											src="./img/card-galary3/yellow2.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white3.jpg">
-										<img
-											data-white="./img/card-galary1/white3.jpg" 
-											data-black="./img/card-galary1/black3.jpg"
-											src="./img/card-galary1/white3.jpg" 
-											alt="" 
-											class="card__galary-img">
+									<a data-fancybox="card-gallery3" href="./img/card-galary3/yellow3.jpg">
+										<img data-white="./img/card-galary3/yellow3.jpg"
+											data-black="./img/card-galary3/black3.jpg"
+											src="./img/card-galary3/yellow3.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 								<div class="card__galary-fotos">
-									<a data-fancybox="card-gallery1" href="./img/card-galary1/white4.jpg">
-										<img
-											data-white="./img/card-galary1/white4.jpg" 
-											data-black="./img/card-galary1/black4.jpg"
-											src="./img/card-galary1/white4.jpg" 
-											alt="" 
-											class="card__galary-img">
+									<a data-fancybox="card-gallery3" href="./img/card-galary3/yellow4.jpg">
+										<img data-white="./img/card-galary3/yellow4.jpg"
+											data-black="./img/card-galary3/black4.jpg"
+											src="./img/card-galary3/yellow4.jpg" alt="" class="card__galary-img">
 									</a>
 								</div>
 							</div>
@@ -571,6 +512,23 @@
 								Заказать
 							</button>
 						</form>
+					</div>
+				</div>
+				<div class="sprey">
+					<div class="sprey__card">
+						<div class="sprey__card-left">
+							<div class="sprey__title">ЗАЩИТНЫЙ СПРЕЙ ДЛЯ ОБУВИ ECCO</div>
+							<p class="sprey__text">Универсальный защитный спрей, который помогает сохранить обувь и аксессуары ECCO чистыми, сухими и без пятен.
+							</p>
+							<p class="sprey__text">Подходит для обуви из гладкой кожи, замши, нубука и ткани, прошел тестовые испытания на коже и отделочных материалах ECCO. Подходит для обуви ECCO с мембраной GORE-TEX.
+							</p>
+							<p class="sprey__info"><b>Объём:</b> 100 мл;</p>
+							<div class="price">
+								<div class="old__price"><b>Цена:</b> 4250 грн</div>
+								<div class="new__price">599 грн</div>
+							</div>
+						</div>
+						<div class="sprey__card-right"></div>
 					</div>
 				</div>
 			</div>
