--- a/src/index.html
+++ b/src/index.html
@@ -518,17 +518,97 @@
 					<div class="sprey__card">
 						<div class="sprey__card-left">
 							<div class="sprey__title">ЗАЩИТНЫЙ СПРЕЙ ДЛЯ ОБУВИ ECCO</div>
-							<p class="sprey__text">Универсальный защитный спрей, который помогает сохранить обувь и аксессуары ECCO чистыми, сухими и без пятен.
+							<p class="sprey__text">Универсальный защитный спрей, который помогает сохранить обувь и
+								аксессуары ECCO чистыми, сухими и без пятен.
 							</p>
-							<p class="sprey__text">Подходит для обуви из гладкой кожи, замши, нубука и ткани, прошел тестовые испытания на коже и отделочных материалах ECCO. Подходит для обуви ECCO с мембраной GORE-TEX.
+							<p class="sprey__text">Подходит для обуви из гладкой кожи, замши, нубука и ткани, прошел
+								тестовые испытания на коже и отделочных материалах ECCO. Подходит для обуви ECCO с
+								мембраной GORE-TEX.
 							</p>
 							<p class="sprey__info"><b>Объём:</b> 100 мл;</p>
 							<div class="price">
-								<div class="old__price"><b>Цена:</b> 4250 грн</div>
+								<div class="old__price"><b>Цена:</b><span> 4250 грн</span></div>
 								<div class="new__price">599 грн</div>
 							</div>
 						</div>
-						<div class="sprey__card-right"></div>
+						<div class="sprey__card-right">
+							<img src="./img/sprey.png" alt="" class="sprey__card-img">
+							<form class="sprey__card-form">
+								<input type="text" class="card__form-input" placeholder="Имя" required>
+								<input type="tel" class="card__form-input" placeholder="Номер телефона" required>
+								<button type="submit" class="order__link">
+									Заказать
+								</button>
+								<div class="time">
+									Акція діє до <span>02.03.2021</span>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="third-section">
+				<div class="main__galary">
+					<div class="main__galary-wrapper">
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/1.jpg">
+								<img src="./img/main-galary/1.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/2.jpg">
+								<img src="./img/main-galary/2.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/3.jpg">
+								<img src="./img/main-galary/3.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/4.jpg">
+								<img src="./img/main-galary/4.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/5.jpg">
+								<img src="./img/main-galary/5.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/6.jpg">
+								<img src="./img/main-galary/6.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/7.jpg">
+								<img src="./img/main-galary/7.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+						<div class="main__galary-box">
+							<a data-fancybox="main-galary" href="./img/main-galary/8.jpg">
+								<img src="./img/main-galary/8.jpg" alt="" class="main__galary-img">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="reviews">
+					<div class="reviews__title-block">
+						<h3 class="reviews__title">Наши отзывы</h3>
+						<h4 class="reviews__subtitle">Puma Roma</h4>
+					</div>
+					<div class="reviews__wrapper">
+						<div class="review">
+							<div class="review__left"></div>
+							<div class="review__foto">
+								<img src="./img/review1.png" alt="" class="review__img">
+							</div>
+						</div>
+					</div>
+					<div class="add__review">
+						<button type="button" class="order__link">
+							Оставить отзыв
+						</button>
 					</div>
 				</div>
 			</div>
